<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="csp_customerInterfaces_palletizer" Id="{013fa87d-573e-4ca3-8bf3-f52e50ef0f80}">
    <Declaration><![CDATA[(*********************************** G.D S.p.A. - Technical Department ***********************************
============= PROGRAM INFO ============
FOLDER:             TBD
MACHINES INVOLVED:  TBD 

============= DESCRIPTION =============
Machine declaration

============= REVISIONS ===============
Date		Version	 	Author      	Description             
----------	-------		------------  	--------------------------------------------
2019/03/27 	0000.00	 	CEC 			Creation of the PRG

**********************************************************************************************************)

TYPE csp_customerInterfaces_palletizer :
STRUCT
	
	Ready:				BOOL;			(*$H_RW	act_when := IMMEDIATE ;
															desc := Palletizer is ready to receive cases; $*)
															
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>